# TermProj-Step7

./: CMakeLists.txt  README.md  copy_file.c  copy_file.h  directory.c  directory.h  ext2.c  ext2.h  file_access.c  file_access.h  inode.c  inode.h  main.c  partition.c  partition.h  vdi.c  vdi.h
